--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "sports-news-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://amjadz.github.io/sportsnews",
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "^2.1.8",
@@ -14,6 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
